--- a/src/Windows-MCP.Net.csproj
+++ b/src/Windows-MCP.Net.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RollForward>Major</RollForward>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
@@ -17,12 +17,12 @@
     <PackageVersion>0.1.2</PackageVersion>
     <PackageTags>AI; MCP; server; stdio; Windows; Desktop; Automation</PackageTags>
     <Description>An MCP server for Windows desktop automation.</Description>
-    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <!-- Include additional files for browsing the MCP server. -->
   <ItemGroup>
     <None Include=".mcp\server.json" Pack="true" PackagePath="/.mcp/" />
+    <None Include="..\README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +33,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
     <PackageReference Include="ReverseMarkdown" Version="2.0.0" />
+    <PackageReference Include="System.Windows.Forms" Version="4.0.0" />
 
   </ItemGroup>
  
