--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'src/**'
-      - '.github/workflows/**'
-  workflow_dispatch:
+      - 'Directory.Build.props'
 
 jobs:
   deploy-nuget:
@@ -14,18 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        working-directory: src
         run: dotnet build --configuration Release
       - name: Pack
-        working-directory: src
         run: dotnet pack --no-build --configuration Release
-      - name: Check API Key
-        run: |
-          if [ -z "${{ vars.XUZEYU }}" ]; then
-            echo "Error: XUZEYU variable is not set in repository settings"
-            exit 1
-          fi
       - name: Push NuGet package
-        working-directory: src
         run: |
           dotnet nuget push **/*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ vars.XUZEYU }}
