--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
+        working-directory: src
         run: dotnet build --configuration Release
       - name: Pack
+        working-directory: src
         run: dotnet pack --no-build --configuration Release
       - name: Push NuGet package
+        working-directory: src
         run: |
           dotnet nuget push **/*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ vars.XUZEYU }}
