--- a/src/Windows-MCP.Net.csproj
+++ b/src/Windows-MCP.Net.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -33,6 +33,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
     <PackageReference Include="ReverseMarkdown" Version="2.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="10.0.0-preview.6.25358.103" />
 
   </ItemGroup>
  
