--- a/src/Windows-MCP.Net.csproj
+++ b/src/Windows-MCP.Net.csproj
@@ -34,6 +34,13 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
     <PackageReference Include="ReverseMarkdown" Version="2.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.0-preview.6.25358.103" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
+    <PackageReference Include="Sdcb.OpenCvSharp4.mini.runtime.debian.12-x64" Version="4.8.0.20231125" />
+    <PackageReference Include="Sdcb.OpenVINO" Version="0.7.0" />
+    <PackageReference Include="Sdcb.OpenVINO.PaddleOCR.Models.Online" Version="0.7.0" />
+    <PackageReference Include="Sdcb.OpenVINO.PaddleOCR" Version="0.7.0" />
+    <PackageReference Include="Sdcb.OpenVINO.runtime.ubuntu.22.04-x64" Version="2025.0.0" />
+    <PackageReference Include="Sdcb.OpenVINO.runtime.win-x64" Version="2025.0.0" />
 
   </ItemGroup>
  
