--- a/src/Windows-MCP.Net/Windows-MCP.Net.csproj
+++ b/src/Windows-MCP.Net/Windows-MCP.Net.csproj
@@ -43,6 +43,11 @@
     <PackageReference Include="Sdcb.OpenVINO.runtime.win-x64" Version="2025.0.0" />
 
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106" />
+    <PackageReference Include="System.Management" Version="10.0.0-preview.6.25358.103" />
+  </ItemGroup>
  
 
 </Project>
