--- a/src/Windows-MCP.Net/Windows-MCP.Net.csproj
+++ b/src/Windows-MCP.Net/Windows-MCP.Net.csproj
@@ -6,6 +6,15 @@
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    
+    <!-- 明确指定运行时标识符，确保native依赖正确加载 -->
+    <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
+    <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">win-x64</RuntimeIdentifier>
+    
+    <!-- 确保native库正确复制和加载 -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <PublishSingleFile>false</PublishSingleFile>
 
     <!-- Set up the NuGet package to be an MCP server -->
     <PackAsTool>true</PackAsTool>
@@ -23,6 +32,19 @@
   <ItemGroup>
     <None Include=".mcp\server.json" Pack="true" PackagePath="/.mcp/" />
     <None Include="..\..\README.md" Pack="true" PackagePath="/" />
+    <None Include="runtimeconfig.template.json" Pack="true" PackagePath="tools/$(TargetFramework)/any/" />
+  </ItemGroup>
+  
+  <!-- 确保native库正确打包到工具包中 -->
+  <ItemGroup>
+    <Content Include="$(NuGetPackageRoot)opencvsharp4.runtime.win\**\runtimes\**" 
+             Pack="true" 
+             PackagePath="tools/$(TargetFramework)/any/runtimes/" 
+             Condition="Exists('$(NuGetPackageRoot)opencvsharp4.runtime.win')" />
+    <Content Include="$(NuGetPackageRoot)sdcb.openvino.runtime.win-x64\**\runtimes\**" 
+             Pack="true" 
+             PackagePath="tools/$(TargetFramework)/any/runtimes/" 
+             Condition="Exists('$(NuGetPackageRoot)sdcb.openvino.runtime.win-x64')" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,7 +56,12 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
     <PackageReference Include="ReverseMarkdown" Version="2.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.0-preview.6.25358.103" />
+    
+    <!-- OpenCV相关包，明确指定平台 -->
+    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20241108" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
+    
+    <!-- OpenVINO相关包 -->
     <PackageReference Include="Sdcb.OpenVINO" Version="0.6.10" />
     <PackageReference Include="Sdcb.OpenVINO.PaddleOCR.Models.Online" Version="0.6.2" />
     <PackageReference Include="Sdcb.OpenVINO.PaddleOCR" Version="0.6.8" />
