--- a/src/Windows-MCP.Net/Windows-MCP.Net.csproj
+++ b/src/Windows-MCP.Net/Windows-MCP.Net.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -66,6 +66,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106" />
     <PackageReference Include="System.Management" Version="10.0.0-preview.6.25358.103" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
  
 
