ci: 移除GitHub Actions中的NuGet部署工作流

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,27 @@
-name: main
-on:
-  push:
-    branches:
-      - main 
-    paths: 
-      - 'Directory.Build.props'
+# name: main
+# on:
+#   push:
+#     branches:
+#       - main 
+#     paths: 
+#       - 'Directory.Build.props'
 
-jobs:
-  deploy-nuget:
-    runs-on: ubuntu-latest
-    environment: XUZEYU
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build
-        run: dotnet build --configuration Release
-      - name: Pack
-        run: dotnet pack --no-build --configuration Release
-      - name: Check API Key
-        run: |
-          if [ -z "${{ vars.XUZEYU }}" ]; then
-            echo "Error: XUZEYU variable is not set in environment settings"
-            exit 1
-          fi
-      - name: Push NuGet package
-        run: |
-          dotnet nuget push **/*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ vars.XUZEYU }}
+# jobs:
+#   deploy-nuget:
+#     runs-on: ubuntu-latest
+#     environment: XUZEYU
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: Build
+#         run: dotnet build --configuration Release
+#       - name: Pack
+#         run: dotnet pack --no-build --configuration Release
+#       - name: Check API Key
+#         run: |
+#           if [ -z "${{ vars.XUZEYU }}" ]; then
+#             echo "Error: XUZEYU variable is not set in environment settings"
+#             exit 1
+#           fi
+#       - name: Push NuGet package
+#         run: |
+#           dotnet nuget push **/*.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ vars.XUZEYU }}
